add css code for 2nd part

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,7 @@
 header {
     img {
         width: 50%;
-        @include center;
+        margin: 20px 0px;
+        @include center-block;
     }
 }
