--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,6 @@
 @import "./utils/functions";
 @import "./layout/header";
 @import "./components/greyblock";
-@import "./components/form";
 @import "./components/button";
-// @import "./layout/nav";
-// @import "./layout/form";
+@import "./components/step";
+@import "./pages/accueil";
