--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -1,9 +1,10 @@
 button {
-    padding: 10px 15px;
+    padding: 15px;
     border-radius: 20px;
     border: none;
     color: white;
+    font-weight: bold;
     background: $cl-primary;
     background: linear-gradient(352deg, rgba(147,86,220,1) 10%, rgba(255,121,218,1) 100%);
-    box-shadow: 5px 2px 10px darken($cl-lightgrey, 30);
+    @include shadow-grey;
 }
