--- a/sass/main.css
+++ b/sass/main.css
@@ -4,6 +4,7 @@ body {
 
 header img {
   width: 50%;
+  margin: 20px 0px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -14,21 +15,97 @@ header img {
   text-align: center;
 }
 
-form input[type=text] {
-  background-color: #ededed;
-  width: 100%;
-  height: 40px;
-  border: none;
-  box-shadow: inset 0px 2px 5px grey;
-  text-align: center;
-}
-
 button {
-  padding: 10px 15px;
+  padding: 15px;
   border-radius: 20px;
   border: none;
   color: white;
+  font-weight: bold;
   background: #9356DC;
   background: linear-gradient(352deg, rgb(147, 86, 220) 10%, rgb(255, 121, 218) 100%);
-  box-shadow: 5px 2px 10px #ababab;
+  box-shadow: 5px 2px 10px #d4d4d4;
+}
+
+.step {
+  background-color: #f7f7f7;
+  border-radius: 20px;
+  padding: 10px 15px;
+  margin: 20px 0;
+  width: 80%;
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 5px 2px 10px #d4d4d4;
+  margin-left: auto;
+  margin-right: auto;
+}
+.step i {
+  color: #6e6e6e;
+  font-size: 25px;
+  margin-right: 30px;
+}
+.step--active {
+  background-color: #f2eafb;
+  border-radius: 20px;
+  padding: 10px 15px;
+  margin: 20px 0;
+  width: 80%;
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 5px 2px 10px #d4d4d4;
+  margin-left: auto;
+  margin-right: auto;
+}
+.step--active i {
+  color: #9356DC;
+  font-size: 25px;
+  margin-right: 30px;
+}
+.step--number {
+  background-color: #9356DC;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 100px;
+  position: relative;
+  right: 40px;
+}
+
+.loc-input {
+  background-color: #ededed;
+  width: 100%;
+  min-height: 40px;
+  border: none;
+  box-shadow: inset 0px 2px 5px #c7c7c7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loc-input p {
+  margin-left: 15px;
+}
+
+.greyblock h3 {
+  margin: 0px;
+  font-size: 25px;
+}
+.greyblock p {
+  margin-bottom: 30px;
+}
+
+.welcome {
+  padding: 40px;
+}
+
+.steps {
+  margin: 50px 0px;
+}
+.steps h3 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-left: 20px;
 }/*# sourceMappingURL=main.css.map */
