--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -1,4 +1,4 @@
-@mixin center {
+@mixin center-block {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -6,4 +6,14 @@
 
 @mixin center-text {
     text-align: center;
+}
+
+@mixin center-flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@mixin shadow-grey {
+    box-shadow: 5px 2px 10px darken($cl-grey, 10);
 }
