--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,5 @@
 @import "./components/greyblock";
 @import "./components/button";
 @import "./components/step";
+@import "./components/restaurant-box.scss";
 @import "./pages/accueil";
