--- a/sass/components/step.scss
+++ b/sass/components/step.scss
@@ -1,38 +1,37 @@
 .step {
     background-color: $cl-lightgrey;
     border-radius: 20px;
-    padding: 10px 15px;
+    padding: 10px 10px;
     margin: 20px 0;
     width: 80%;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
-    @include center-flex;
     @include shadow-grey;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    align-items: center;
+
+    .flex {
+        display: flex;
+        align-items: center;
+        position: relative;
+        right: 40px;
+    }
+
     i {
         color: darken($cl-grey, 50);
         font-size: 25px;
-        margin-right: 30px;
+        margin: 0px 30px;
+        width: 20px;
     }
 
-    // VOIR POURQUOI JE DOIS TOUT REMETTRE
-    &--active{
+    &--active {
+        @extend .step;
         background-color: lighten($cl-primary, 35);
-        border-radius: 20px;
-        padding: 10px 15px;
-        margin: 20px 0;
-        width: 80%;
-        font-size: 18px;
-        font-weight: bold;
-        @include center-flex;
-        @include shadow-grey;
-        margin-left: auto;
-        margin-right: auto;
+
         i {
             color: $cl-primary;
-            font-size: 25px;
-            margin-right: 30px;
         }
     }
 
@@ -42,6 +41,6 @@
         padding: 5px 10px;
         border-radius: 100px;
         position: relative;
-        right: 40px;
+        right: 30px;
     }
 }
