--- a/sass/pages/accueil.scss
+++ b/sass/pages/accueil.scss
@@ -1,22 +1,34 @@
+body {
+    margin: 0px;
+}
+
 .loc-input {
     background-color: $cl-grey;
+    color: darken($cl-grey, 70);
     width: 100%;
     min-height: 40px;
     border: none;
     box-shadow: inset 0px 2px 5px darken($cl-grey, 15);
     @include center-flex;
+
     p {
         margin-left: 15px;
+        font-weight: bolder;
     }
 }
 
-.greyblock{
+.greyblock {
     h3 {
         margin: 0px;
-        font-size: 25px;
+        font-size: 26px;
+        font-weight: bolder;
     }
+
     p {
         margin-bottom: 30px;
+        font-size: 20px;
+        color: darken($cl-grey, 50);
+        font-weight: light;
     }
 }
 
@@ -26,6 +38,7 @@
 
 .steps {
     margin: 50px 0px;
+
     h3 {
         font-size: 28px;
         font-weight: bold;
