--- a/sass/pages/accueil.scss
+++ b/sass/pages/accueil.scss
@@ -19,9 +19,8 @@ body {
 
 .greyblock {
     h3 {
-        margin: 0px;
-        font-size: 26px;
-        font-weight: bolder;
+        font-size: 25px;
+        font-weight: bold;
     }
 
     p {
@@ -30,10 +29,20 @@ body {
         color: darken($cl-grey, 50);
         font-weight: light;
     }
+
+    h4 {
+        font-size: 25px;
+        font-weight: bold;
+        text-align: left;
+        padding-top: 40px;
+        padding-left: 20px;
+        margin: 0px;
+      }
 }
 
 .welcome {
     padding: 40px;
+    text-align: center;
 }
 
 .steps {
@@ -44,4 +53,9 @@ body {
         font-weight: bold;
         margin-left: 20px;
     }
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
