--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,4 +14,6 @@
 @import "./components/menu-card.scss";
 @import "./components/heartanimation.scss";
 @import "./components/menu-cards-animation.scss";
+@import "./components/menu-card-green-animation.scss";
 @import "./pages/accueil";
+@import "./pages/desktop";
