--- a/sass/components/menu-card.scss
+++ b/sass/components/menu-card.scss
@@ -1,26 +1,28 @@
 .menu-card {
-    background-color: white;
-    border-radius: 20px;
-    padding: 10px 15px;
-    margin-bottom: 15px;
-    @include shadow-grey;
-    &--title {
-        margin: 0px;
-        font-size: 18px;
-        margin-bottom: 5px;
+  background-color: white;
+  border-radius: 20px;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  @include shadow-grey;
+  &--title {
+    margin: 0px;
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+  &--flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    &--subtitle {
+      margin: 0px;
+      font-weight: 350;
+      font-size: 15px;
     }
-    &--flex {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        &--subtitle {
-            margin: 0px;
-            font-weight: 350;
-            font-size: 15px;
-        }
-        &--price {
-            margin: 0px; 
-            font-weight: bold;
-        }
+    &--price {
+      margin: 0px;
+      font-weight: bold;
     }
+  }
 }
