--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,6 @@
 @import "./components/heartanimation.scss";
 @import "./components/menu-cards-animation.scss";
 @import "./components/menu-card-green-animation.scss";
+@import "./components/loader";
 @import "./pages/accueil";
 @import "./pages/desktop";
