--- a/sass/main.css
+++ b/sass/main.css
@@ -31,6 +31,9 @@ footer i {
   margin-right: 10px;
   width: 20px;
 }
+footer a {
+  color: white;
+}
 
 .greyblock {
   background-color: #f7f7f7;
@@ -48,6 +51,11 @@ button {
   box-shadow: 5px 2px 10px #d4d4d4;
   font-size: 16px;
   font-weight: 500;
+}
+button:hover {
+  filter: brightness(1.1);
+  cursor: pointer;
+  box-shadow: 5px 2px 10px #6e6e6e;
 }
 
 .step, .step--active {
@@ -247,6 +255,9 @@ button {
   margin: 0px;
   font-weight: bold;
 }
+.menu-card:hover {
+  cursor: pointer;
+}
 
 .restaurant-box--flex-ctn {
   position: relative;
@@ -279,6 +290,14 @@ button {
 }
 .menu-container--insert--header .fa-solid:active {
   opacity: 1;
+}
+
+.fa-regular:hover {
+  cursor: pointer;
+}
+
+.fa-solid:hover {
+  cursor: pointer;
 }
 
 .entrees,
@@ -384,6 +403,41 @@ button {
     transform: rotate(360deg);
   }
 }
+.loader {
+  width: 100vw;
+  height: 100vh;
+  background-color: #f7f7f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0px;
+  z-index: 1;
+  -webkit-animation: loader-animation 1000ms both;
+          animation: loader-animation 1000ms both;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+@-webkit-keyframes loader-animation {
+  0% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0%;
+    z-index: 0;
+  }
+}
+
+@keyframes loader-animation {
+  0% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0%;
+    z-index: 0;
+  }
+}
 body {
   margin: 0px;
 }
@@ -464,7 +518,6 @@ a {
   }
   .menu-container--inside .menu-section {
     margin-right: 20px;
-    min-width: 30%;
-    max-width: 60%;
+    width: 30%;
   }
 }/*# sourceMappingURL=main.css.map */
