--- a/sass/pages/desktop.scss
+++ b/sass/pages/desktop.scss
@@ -24,8 +24,10 @@
     flex-wrap: wrap;
     .menu-section {
       margin-right: 20px;
-      min-width: 30%;
-      max-width: 60%;
+      width: 30%;
+      // .menu-card {
+      //   width: 350px;
+      // }
     }
   }
 }
