--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -1,19 +1,23 @@
 @mixin center-block {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @mixin center-text {
-    text-align: center;
+  text-align: center;
 }
 
 @mixin center-flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @mixin shadow-grey {
-    box-shadow: 5px 2px 10px darken($cl-grey, 10);
+  box-shadow: 5px 2px 10px darken($cl-grey, 10);
+}
+
+@mixin shadow-grey-darker {
+  box-shadow: 5px 2px 10px darken($cl-grey, 50);
 }
