--- a/sass/components/heartanimation.scss
+++ b/sass/components/heartanimation.scss
@@ -11,7 +11,7 @@
     opacity: 0;
     transition: 0.3s;
   }
-  .fa-solid:active {
+  .fa-solid:hover {
     opacity: 1;
   }
 }
@@ -28,7 +28,7 @@
     opacity: 0;
     transition: 0.3s;
   }
-  .fa-solid:active {
+  .fa-solid:hover {
     opacity: 1;
   }
 }
