--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -1,6 +1,7 @@
 .loader {
   width: 100vw;
   height: 100vh;
+  color: $cl-primary;
   background-color: $cl-lightgrey;
   @include center-flex;
   position: fixed;
@@ -16,6 +17,6 @@
   }
   100% {
     opacity: 0%;
-    z-index: 0;
+    z-index: -1;
   }
 }
